fixed alignment of header and footer

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .main-container {
-  max-width: 1200px; /* Optimal reading width */
+  max-width: 800px; /* Optimal reading width */
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -27,6 +27,7 @@ header {
   text-align: center;
   margin-bottom: 2rem;
 }*/
+
 header {
   background: 
     linear-gradient(to bottom, 
@@ -38,10 +39,10 @@ header {
   color: #ebf1e9;
   font-size: 50px;
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 5;
   text-align: center;
   margin-bottom: 3rem;
-  min-height: 250px;
+  min-height: 160px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -100,7 +101,6 @@ header h1 {
 .gallery-container {
   padding: 0 1rem;
   width: 100%;
-  max-width: 1200px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -109,6 +109,8 @@ header h1 {
   column-count: 3;
   column-gap: 1.5rem;
   margin: 0 auto;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  justify-items: center; /* Add this */
 }
 
 .card {
@@ -268,7 +270,7 @@ header h1 {
 }
 
 .submission-cta p {
-  color: red;
+  color: white;
   font-size: 1.1rem;
   margin-top: 1.5rem;
 }
@@ -276,8 +278,8 @@ header h1 {
 .help-button {
   background-color: #98bdac;
   color: #063921;
-  padding: 0.2rem 0.1rem;
-  border-radius: 4px;
+  padding: 0.1rem 0.3rem;
+  border-radius: 6px;
   text-decoration: none;
   margin: 0 0.1rem;
 }
@@ -293,15 +295,16 @@ footer {
   color: white;
   text-align: center;
   padding: 1rem;
-  width: 100%;
+  display: inline-block;
+  white-space: nowrap;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  min-height: 100px;
   /*margin-top: 6.2; /* Ensures footer stays at bottom */
 }
 
-.footer-content {
-  max-width: 800px;
-  margin: 0 auto; /* Centers content horizontally */
-  line-height: 1.6;
-}
 
 /* Responsive masonry columns */
 @media (max-width: 900px) {
